# clang-cfi-showcase

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cfi_cast_strict.cpp  cfi_icall.c  cfi_mfcall.cpp  cfi_nvcall.cpp  cfi_unrelated_cast.cpp  clean.sh  compile.sh  format.sh
source/: derived_cast.cpp  icall.c  mfcall.cpp  vcall.cpp
